--- a/SandboxApp/SeniorLivingPortal/Views/_ViewImports.cshtml
+++ b/SandboxApp/SeniorLivingPortal/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using SeniorLivingPortal
 @using SeniorLivingPortal.Models
 @using SeniorLivingPortal.Infrastructure
+@using Syncfusion.EJ2
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Syncfusion.EJ2
 @addTagHelper *, SeniorLivingPortal
